<resources>
    <string name="app_name">FantasyLand</string>

    <!-- Main -->
    <string name="your_nickname">Your nickname</string>
    <string name="nickname_hint">Enter your nickname</string>
    <string name="fantasy_land_cards">FantasyLand cards</string>

    <!-- Game -->
    <string name="home">Home</string>
    <string name="play">Play</string>
    <string name="sort">Sort</string>
    <string name="set_all_cards">Set All Cards</string>
    <string name="done">Done</string>
    <string name="new_game">New Game</string>
    <string name="result_x">X</string>
    <string name="new_fantasyland">New FantasyLand!</string>
    <string name="share">Share</string>
    <string name="share_subject">My FantasyLand Result</string>

    <string name="card_view_0">Card 0</string>
    <string name="card_view_1">Card 1</string>
    <string name="card_view_2">Card 2</string>
    <string name="card_view_3">Card 3</string>
    <string name="card_view_4">Card 4</string>
    <string name="card_view_5">Card 5</string>
    <string name="card_view_6">Card 6</string>
    <string name="card_view_7">Card 7</string>
    <string name="card_view_8">Card 8</string>
    <string name="card_view_9">Card 9</string>
    <string name="card_view_10">Card 10</string>
    <string name="card_view_11">Card 11</string>
    <string name="card_view_12">Card 12</string>
    <string name="card_view_13">Card 13</string>
    <string name="card_view_14">Card 14</string>
    <string name="card_view_15">Card 15</string>
    <string name="card_view_16">Card 16</string>
    <string name="card_view_17">Card 17</string>
    <string name="card_view_18">Card 18</string>
    <string name="card_view_19">Card 19</string>
    <string name="card_view_20">Card 20</string>
    <string name="card_view_21">Card 21</string>
    <string name="card_view_22">Card 22</string>
    <string name="card_view_23">Card 23</string>
    <string name="card_view_24">Card 24</string>
    <string name="card_view_25">Card 25</string>
    <string name="card_view_26">Card 26</string>
    <string name="card_view_27">Card 27</string>
    <string name="card_view_28">Card 28</string>
    <string name="card_view_29">Card 29</string>

    <!-- Menu -->
    <string name="rules">Rules</string>
    <string name="settings">Settings</string>

    <!-- Settings -->
    <string name="title_activity_settings">Settings</string>
    <string name="personal_header">Personal</string>
    <string name="nickname_title">Your nickname</string>

    <!-- Rules -->
    <string name="rulesHtml">
        <![CDATA[

        <h1>Rules</h1>

        <h2>Game</h2>

        <p>The game is played with 52-card deck.</p>

        <p>The object of the game is to form three hands, also referred to as "rows":</p>
        <ul>
        <li>Bottom row - 5-card hand</li>
        <li>Middle row - 5-card hand</li>
        <li>Top row - 3-card hand</li>
        </ul>

        <p>Bottom row hand must rank higher of equal to middle row hand.
        <br>Middle row hand must rank higher of equal to top row hand.</p>

        <p>The regular Texas Hold\'em showdown hand values are used for comparison.</p>

        <h2>Scoring</h2>

        <table border="1">
            <tr>
                <td></td>
                <td><b>Bottom Row</b></td>
                <td><b>Middle Row</b></td>
            </tr>
            <tr>
                <td>Royal flush</td>
                <td>25</td>
                <td>50</td>
            </tr>
            <tr>
                <td>Straight flush</td>
                <td>15</td>
                <td>30</td>
            </tr>
            <tr>
                <td>Quads</td>
                <td>10</td>
                <td>20</td>
            </tr>
            <tr>
                <td>Full house</td>
                <td>6</td>
                <td>12</td>
            </tr>
            <tr>
                <td>Flush</td>
                <td>4</td>
                <td>8</td>
            </tr>
            <tr>
                <td>Straight</td>
                <td>2</td>
                <td>4</td>
            </tr>
            <tr>
                <td>Trips</td>
                <td></td>
                <td>2</td>
            </tr>
        </table>

        <p>

        <table border="1">
            <tr>
                <td></td>
                <td><b>Top Row</b></td>
            </tr>
            <tr>
                <td>Trips AAA</td>
                <td>22</td>
            </tr>
            <tr>
                <td>Trips KKK</td>
                <td>21</td>
            </tr>
            <tr>
                <td>Trips QQQ</td>
                <td>20</td>
            </tr>
            <tr>
                <td>Trips JJJ</td>
                <td>19</td>
            </tr>
            <tr>
                <td>Trips TTT</td>
                <td>18</td>
            </tr>
            <tr>
                <td>Trips 999</td>
                <td>17</td>
            </tr>
            <tr>
                <td>Trips 888</td>
                <td>16</td>
            </tr>
            <tr>
                <td>Trips 777</td>
                <td>15</td>
            </tr>
            <tr>
                <td>Trips 666</td>
                <td>14</td>
            </tr>
            <tr>
                <td>Trips 555</td>
                <td>13</td>
            </tr>
            <tr>
                <td>Trips 444</td>
                <td>12</td>
            </tr>
            <tr>
                <td>Trips 333</td>
                <td>11</td>
            </tr>
            <tr>
                <td>Trips 222</td>
                <td>10</td>
            </tr>
            <tr>
                <td>Pair AA</td>
                <td>9</td>
            </tr>
            <tr>
                <td>Pair KK</td>
                <td>8</td>
            </tr>
            <tr>
                <td>Pair QQ</td>
                <td>7</td>
            </tr>
            <tr>
                <td>Pair JJ</td>
                <td>6</td>
            </tr>
            <tr>
                <td>Pair TT</td>
                <td>5</td>
            </tr>
            <tr>
                <td>Pair 99</td>
                <td>4</td>
            </tr>
            <tr>
                <td>Pair 88</td>
                <td>3</td>
            </tr>
            <tr>
                <td>Pair 77</td>
                <td>2</td>
            </tr>
            <tr>
                <td>Pair 66</td>
                <td>1</td>
            </tr>
        </table>

        ]]>
    </string>
</resources>