<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    tools:context=".GameFragment">

    <!-- Top Row Cards (10 - 12) -->

    <LinearLayout
        android:id="@+id/linearLayoutTopRow"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:orientation="horizontal"
        app:layout_constraintBottom_toTopOf="@id/linearLayoutMiddleRow"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.10"
        app:layout_constraintVertical_chainStyle="packed">

        <ImageView
            android:id="@+id/cardView10"
            style="@style/cardViewStyle"
            android:contentDescription="@string/card_view_10"
            app:srcCompat="@drawable/empty_card" />

        <ImageView
            android:id="@+id/cardView11"
            style="@style/cardViewStyle"
            android:contentDescription="@string/card_view_11"
            app:srcCompat="@drawable/empty_card" />

        <ImageView
            android:id="@+id/cardView12"
            style="@style/cardViewStyle"
            android:contentDescription="@string/card_view_12"
            app:srcCompat="@drawable/empty_card" />

    </LinearLayout>

    <!-- Middle Row Cards (5 - 9) -->

    <LinearLayout
        android:id="@+id/linearLayoutMiddleRow"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintBottom_toTopOf="@id/linearLayoutBottomRow"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/linearLayoutTopRow">

        <ImageView
            android:id="@+id/cardView5"
            style="@style/cardViewStyle"
            android:contentDescription="@string/card_view_5"
            app:srcCompat="@drawable/empty_card" />

        <ImageView
            android:id="@+id/cardView6"
            style="@style/cardViewStyle"
            android:contentDescription="@string/card_view_6"
            app:srcCompat="@drawable/empty_card" />

        <ImageView
            android:id="@+id/cardView7"
            style="@style/cardViewStyle"
            android:contentDescription="@string/card_view_7"
            app:srcCompat="@drawable/empty_card" />

        <ImageView
            android:id="@+id/cardView8"
            style="@style/cardViewStyle"
            android:contentDescription="@string/card_view_8"
            app:srcCompat="@drawable/empty_card" />

        <ImageView
            android:id="@+id/cardView9"
            style="@style/cardViewStyle"
            android:contentDescription="@string/card_view_9"
            app:srcCompat="@drawable/empty_card" />

    </LinearLayout>

    <!-- Bottom Row Cards (0 - 4) -->

    <LinearLayout
        android:id="@+id/linearLayoutBottomRow"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/linearLayoutMiddleRow">

        <ImageView
            android:id="@+id/cardView0"
            style="@style/cardViewStyle"
            android:contentDescription="@string/card_view_0"
            app:srcCompat="@drawable/empty_card" />

        <ImageView
            android:id="@+id/cardView1"
            style="@style/cardViewStyle"
            android:contentDescription="@string/card_view_1"
            app:srcCompat="@drawable/empty_card" />

        <ImageView
            android:id="@+id/cardView2"
            style="@style/cardViewStyle"
            android:contentDescription="@string/card_view_2"
            app:srcCompat="@drawable/empty_card" />

        <ImageView
            android:id="@+id/cardView3"
            style="@style/cardViewStyle"
            android:contentDescription="@string/card_view_3"
            app:srcCompat="@drawable/empty_card" />

        <ImageView
            android:id="@+id/cardView4"
            style="@style/cardViewStyle"
            android:contentDescription="@string/card_view_4"
            app:srcCompat="@drawable/empty_card" />

    </LinearLayout>

    <TextView
        android:id="@+id/topRowResult"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="12dp"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="@id/linearLayoutTopRow"
        app:layout_constraintStart_toEndOf="@id/linearLayoutMiddleRow"
        app:layout_constraintTop_toTopOf="@id/linearLayoutTopRow" />

    <TextView
        android:id="@+id/middleRowResult"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="12dp"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="@id/linearLayoutMiddleRow"
        app:layout_constraintEnd_toEndOf="@id/topRowResult"
        app:layout_constraintTop_toTopOf="@id/linearLayoutMiddleRow" />

    <TextView
        android:id="@+id/bottomRowResult"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="12dp"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="@id/linearLayoutBottomRow"
        app:layout_constraintEnd_toEndOf="@id/topRowResult"
        app:layout_constraintTop_toTopOf="@id/linearLayoutBottomRow" />

    <TextView
        android:id="@+id/finalResult"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="60sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@id/linearLayoutMiddleRow"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/linearLayoutMiddleRow"
        app:layout_constraintTop_toTopOf="@id/linearLayoutMiddleRow" />

    <TextView
        android:id="@+id/newFantasyLand"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/newFantasyLand"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="@id/linearLayoutTopRow"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/linearLayoutMiddleRow"
        app:layout_constraintTop_toTopOf="@id/linearLayoutTopRow" />

    <!-- Dealt Cards (13 - 29) -->

    <LinearLayout
        android:id="@+id/linearLayoutDealtCards"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/linearLayoutBottomRow"
        app:layout_constraintVertical_bias="0.20">

        <ImageView
            android:id="@+id/cardView13"
            style="@style/cardViewStyle"
            android:contentDescription="@string/card_view_13"
            app:srcCompat="@drawable/empty_card" />

        <ImageView
            android:id="@+id/cardView14"
            style="@style/cardViewStyle"
            android:contentDescription="@string/card_view_14"
            app:srcCompat="@drawable/empty_card" />

        <ImageView
            android:id="@+id/cardView15"
            style="@style/cardViewStyle"
            android:contentDescription="@string/card_view_15"
            app:srcCompat="@drawable/empty_card" />

        <ImageView
            android:id="@+id/cardView16"
            style="@style/cardViewStyle"
            android:contentDescription="@string/card_view_16"
            app:srcCompat="@drawable/empty_card" />

        <ImageView
            android:id="@+id/cardView17"
            style="@style/cardViewStyle"
            android:contentDescription="@string/card_view_17"
            app:srcCompat="@drawable/empty_card" />

        <ImageView
            android:id="@+id/cardView18"
            style="@style/cardViewStyle"
            android:contentDescription="@string/card_view_18"
            app:srcCompat="@drawable/empty_card" />

        <ImageView
            android:id="@+id/cardView19"
            style="@style/cardViewStyle"
            android:contentDescription="@string/card_view_19"
            app:srcCompat="@drawable/empty_card" />

        <ImageView
            android:id="@+id/cardView20"
            style="@style/cardViewStyle"
            android:contentDescription="@string/card_view_20"
            app:srcCompat="@drawable/empty_card" />

        <ImageView
            android:id="@+id/cardView21"
            style="@style/cardViewStyle"
            android:contentDescription="@string/card_view_21"
            app:srcCompat="@drawable/empty_card" />

        <ImageView
            android:id="@+id/cardView22"
            style="@style/cardViewStyle"
            android:contentDescription="@string/card_view_22"
            app:srcCompat="@drawable/empty_card" />

        <ImageView
            android:id="@+id/cardView23"
            style="@style/cardViewStyle"
            android:contentDescription="@string/card_view_23"
            app:srcCompat="@drawable/empty_card" />

        <ImageView
            android:id="@+id/cardView24"
            style="@style/cardViewStyle"
            android:contentDescription="@string/card_view_24"
            app:srcCompat="@drawable/empty_card" />

        <ImageView
            android:id="@+id/cardView25"
            style="@style/cardViewStyle"
            android:contentDescription="@string/card_view_25"
            app:srcCompat="@drawable/empty_card" />

        <ImageView
            android:id="@+id/cardView26"
            style="@style/cardViewStyle"
            android:contentDescription="@string/card_view_26"
            app:srcCompat="@drawable/empty_card" />

        <ImageView
            android:id="@+id/cardView27"
            style="@style/cardViewStyle"
            android:contentDescription="@string/card_view_27"
            app:srcCompat="@drawable/empty_card" />

        <ImageView
            android:id="@+id/cardView28"
            style="@style/cardViewStyle"
            android:contentDescription="@string/card_view_28"
            app:srcCompat="@drawable/empty_card" />

        <ImageView
            android:id="@+id/cardView29"
            style="@style/cardViewStyle"
            android:contentDescription="@string/card_view_29"
            app:srcCompat="@drawable/empty_card" />

    </LinearLayout>

    <!-- Buttons -->

    <Button
        android:id="@+id/buttonSort"
        style="@style/Widget.AppCompat.Button.Colored"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sort"
        android:textSize="@dimen/game_buttons_text_size"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@id/buttonSetAllCards"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/linearLayoutDealtCards" />

    <Button
        android:id="@+id/buttonSetAllCards"
        style="@style/Widget.AppCompat.Button.Colored"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/set_all_cards"
        android:textSize="@dimen/game_buttons_text_size"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/buttonSort"
        app:layout_constraintTop_toBottomOf="@id/linearLayoutDealtCards" />

    <Button
        android:id="@+id/buttonDone"
        style="@style/Widget.AppCompat.Button.Colored"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/done"
        android:textSize="@dimen/game_buttons_text_size"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/linearLayoutDealtCards" />

    <Button
        android:id="@+id/buttonNewGame"
        style="@style/Widget.AppCompat.Button.Colored"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/new_game"
        android:textSize="@dimen/game_buttons_text_size"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/linearLayoutDealtCards" />

    <Button
        android:id="@+id/buttonShare"
        style="@style/Widget.AppCompat.Button.Colored"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/share"
        android:textSize="@dimen/game_buttons_text_size"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.9"
        app:layout_constraintStart_toEndOf="@id/buttonNewGame"
        app:layout_constraintTop_toBottomOf="@id/linearLayoutDealtCards" />

</androidx.constraintlayout.widget.ConstraintLayout>